change opening page

--- a/html/company.html
+++ b/html/company.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>delta_yako</title>
+    <title>company_yako</title>
     <link href = "../css/style.css" rel = "stylesheet">
     <script src = "../script/script.js"></script>
 </head>
@@ -44,28 +44,13 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <div class="splash">
-            <div class="catch_phrase_container">
-                <p class="catch_phrase1 fade-in1">小さな屋台の灯りに集い</p>
-                <p class="catch_phrase2 fade-in2">夜を乗り越えて行きましょう。</p>
-            </div>
-        </div>
-
-        <img src = "../images/yatai.jpg" alt = "屋台の写真" class = "yatai_img">
-
-        <article>
-            <section>
-                <div class = "yatai_defo">
-                    <img src = "../images/yatai_deformed.png" alt = "デフォルメ屋台">
-                </div>
-            </section>
-        </article>
+        <p>
+            Comming Soon!!
+        </p>
     </main>
-
     <footer>
-      <small>&copy;2024 All rights reserved</small>  
+
     </footer>
 </body>
 </html>
