--- a/html/menu.html
+++ b/html/menu.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>delta_yako</title>
+    <title>MENU</title>
     <link href = "../css/style.css" rel = "stylesheet">
     <script src = "../script/script.js"></script>
 </head>
@@ -44,28 +44,40 @@
             </ul>
         </nav>
     </header>
-
     <main>
-        <div class="splash">
-            <div class="catch_phrase_container">
-                <p class="catch_phrase1 fade-in1">小さな屋台の灯りに集い</p>
-                <p class="catch_phrase2 fade-in2">夜を乗り越えて行きましょう。</p>
-            </div>
-        </div>
-
-        <img src = "../images/yatai.jpg" alt = "屋台の写真" class = "yatai_img">
-
         <article>
-            <section>
-                <div class = "yatai_defo">
-                    <img src = "../images/yatai_deformed.png" alt = "デフォルメ屋台">
-                </div>
+            <section class = "hotsand">
+                <h3 class = "hot_menu">
+                    燻製鴨肉ホットサンド
+                </h3>
+
+                <img src = "../images/smokechickin.JPG" alt = "燻製鴨肉ホットサンド" class = "smorking_chickin">
+
+                <p class = "price">
+                    ¥700
+                </p>
+                <p>
+                    <small class = "institute">※2024年12月時点</small>
+                </p>
+            </section>
+            <section class = "hotsand">
+                <h3 class = "hot_menu">
+                    燻製鴨肉ホットサンド
+                </h3>
+
+                <img src = "../images/smokechickin.JPG" alt = "燻製鴨肉ホットサンド" class = "smorking_chickin">
+
+                <p class = "price">
+                    ¥700
+                </p>
+                <p>
+                    <small class = "institute">※2024年12月時点</small>
+                </p>
             </section>
         </article>
     </main>
-
     <footer>
-      <small>&copy;2024 All rights reserved</small>  
+        <small class = "footer_menu">&copy;2024 All rights reserved</small>  
     </footer>
 </body>
 </html>
