--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -9,36 +9,36 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav class="nav">
             <ul>
                 <li>
-                    <div class = "navicon">
-                        <a href = "delta_top.html"><img src = "../images/icon.png" alt = "微小夜行電灯のメニュー一覧用画像" class = "iconmenu"></a>
+                    <div class="navicon">
+                        <a href="delta_top.html"><img src="../images/icon.png" alt="微小夜行電灯のメニュー一覧用画像" class="iconmenu"></a>
                     </div>
                 </li>
-
-
                 <li>
-                    <div class = "navbutton">
-                        <a href = "delta_top.html" class ="btn">微小夜行電灯</a>
+                    <div class="navbutton">
+                        <a href="delta_top.html" class="btn">微小夜行電灯</a>
                     </div>
                 </li>
-
                 <li>
-                    <div class = "navbutton">
-                        <a href = "menu.html" class = "btn">メニュー</a>
+                    <div class="navbutton">
+                        <a href="menu.html" class="btn">メニュー</a>
                     </div>
                 </li>
-
                 <li>
-                    <div class = "navbutton">
-                        <a href = "notice.html" class = "btn">お知らせ</a>
+                    <div class="navbutton">
+                        <a href="notice.html" class="btn">お知らせ</a>
                     </div>
                 </li>
-
                 <li>
-                    <div class = "navbutton">
-                        <a href = "company.html" class = "btn">事業内容</a>
+                    <div class="navbutton">
+                        <a href="company.html" class="btn">事業内容</a>
                     </div>
                 </li>
             </ul>
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-      <small>&copy;2024 All rights reserved</small>  
+      <small>&copy;2025 All rights reserved</small>  
     </footer>
 </body>
 </html>
