--- a/html/menu.html
+++ b/html/menu.html
@@ -57,27 +57,27 @@
                     ¥700
                 </p>
                 <p>
-                    <small class = "institute">※2024年12月時点</small>
+                    <small class = "institute">※2025年2月時点</small>
                 </p>
             </section>
             <section class = "hotsand">
                 <h3 class = "hot_menu">
-                    燻製鴨肉ホットサンド
+                    フルーツ大福ホットサンド
                 </h3>
 
-                <img src = "../images/smokechickin.JPG" alt = "燻製鴨肉ホットサンド" class = "smorking_chickin">
+                <img src = "../images/smokechickin" alt = "NoImage" class = "smorking_chickin">
 
                 <p class = "price">
                     ¥700
                 </p>
                 <p>
-                    <small class = "institute">※2024年12月時点</small>
+                    <small class = "institute">※2025年2月時点</small>
                 </p>
             </section>
         </article>
     </main>
     <footer>
-        <small class = "footer_menu">&copy;2024 All rights reserved</small>  
+        <small class = "footer_menu">&copy;2025 All rights reserved</small>  
     </footer>
 </body>
 </html>
