--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>
                     <div class="navicon">
-                        <a href="delta_top.html"><img src="../images/icon.png" alt="微小夜行電灯のメニュー一覧用画像" class="iconmenu"></a>
+                        <a href="https://www.instagram.com/delta_yako?igsh=MTYxZmJzZG5yZHZieA%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer"><img src="../images/icon.png" alt="微小夜行電灯のメニュー一覧用画像" class="iconmenu"></a>
                     </div>
                 </li>
                 <li>
@@ -53,13 +53,11 @@
             </div>
         </div>
 
-        <img src = "../images/yatai.jpg" alt = "屋台の写真" class = "yatai_img">
+        <img src = "../images/yatai_delta.jpg" alt = "屋台の写真" class = "yatai_img">
 
         <article>
             <section>
-                <div class = "yatai_defo">
-                    <img src = "../images/yatai_deformed.png" alt = "デフォルメ屋台">
-                </div>
+
             </section>
         </article>
     </main>
