--- a/html/notice.html
+++ b/html/notice.html
@@ -50,7 +50,7 @@
         </p>
     </main>
     <footer>
-
+        <small>&copy;2025 All rights reserved</small> 
     </footer>
 </body>
 </html>
