add home animation

--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -23,7 +23,7 @@
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="delta_top.html" class="btn">微小夜行電灯</a>
+                        <a href="delta_top.html?nosplash=true" class="btn">微小夜行電灯</a>
                     </div>
                 </li>
                 <li>
@@ -53,7 +53,11 @@
             </div>
         </div>
 
-        <img src = "../images/yatai_delta.jpg" alt = "屋台の写真" class = "yatai_img">
+        <div class="image-container">
+            <img src="../images/yatai_delta.jpg" alt="屋台の写真" class="slideshow-img fade">
+            <img src="../images/delta_yako_1.jpg" alt="屋台の写真" class="slideshow-img fade">
+            <img src="../images/yatai_running.png" alt="屋台の写真" class="slideshow-img fade">
+        </div>
 
         <article>
             <section>
