add some image and description

--- a/html/company.html
+++ b/html/company.html
@@ -32,13 +32,13 @@
 
                 <li>
                     <div class = "navbutton">
-                        <a href = "notice.html" class = "btn">お知らせ</a>
+                        <a href = "notice.html" class = "btn">事業内容</a>
                     </div>
                 </li>
 
                 <li>
                     <div class = "navbutton">
-                        <a href = "company.html" class = "btn">事業内容</a>
+                        <a href = "company.html" class = "btn">お知らせ</a>
                     </div>
                 </li>
             </ul>
