--- a/html/menu.html
+++ b/html/menu.html
@@ -33,46 +33,36 @@
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="notice.html" class="btn">お知らせ</a>
+                        <a href="notice.html" class="btn">事業内容</a>
                     </div>
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="company.html" class="btn">事業内容</a>
+                        <a href="company.html" class="btn">お知らせ</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <article>
-            <section class = "hotsand">
-                <h3 class = "hot_menu">
-                    燻製鴨肉ホットサンド
-                </h3>
-
-                <img src = "../images/smokechickin.JPG" alt = "燻製鴨肉ホットサンド" class = "smorking_chickin">
-
-                <p class = "price">
-                    ¥700
-                </p>
-                <p>
-                    <small class = "institute">※2025年2月時点</small>
-                </p>
+        <article class="menu-list">
+            <h1 class="menu-category">HOTSAND</h1>
+            <section class="menu-item">
+                <h3 class="menu-title"><ruby>燻製鴨肉<rt>くんせいかもにく</rt></ruby>ホットサンド</h3>
+                <div class="menu-image-container">
+                    <img src="../images/smokechickin_cut.png" alt="燻製鴨肉ホットサンド" class="menu-image">
+                </div>
+                <p class="price">¥700</p>
+                <p><small class="institute">※2025年2月時点</small></p>
             </section>
-            <section class = "hotsand">
-                <h3 class = "hot_menu">
-                    フルーツ大福ホットサンド
-                </h3>
 
-                <img src = "../images/smokechickin" alt = "NoImage" class = "smorking_chickin">
-
-                <p class = "price">
-                    ¥700
-                </p>
-                <p>
-                    <small class = "institute">※2025年2月時点</small>
-                </p>
+            <section class="menu-item">
+                <h3 class="menu-title">フルーツ大福ホットサンド</h3>
+                <div class="menu-image-container">
+                    <img src="../images/" alt="NoImage" class="menu-image">
+                </div>
+                <p class="price">¥700</p>
+                <p><small class="institute">※2025年2月時点</small></p>
             </section>
         </article>
     </main>
