--- a/html/menu.html
+++ b/html/menu.html
@@ -18,7 +18,7 @@
             <ul>
                 <li>
                     <div class="navicon">
-                        <a href="delta_top.html"><img src="../images/icon.png" alt="微小夜行電灯のメニュー一覧用画像" class="iconmenu"></a>
+                        <a href="https://www.instagram.com/delta_yako?igsh=MTYxZmJzZG5yZHZieA%3D%3D&utm_source=qr"><img src="../images/icon.png" alt="微小夜行電灯のメニュー一覧用画像" class="iconmenu"></a>
                     </div>
                 </li>
                 <li>
@@ -33,12 +33,12 @@
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="notice.html" class="btn">事業内容</a>
+                        <a href="company.html" class="btn">事業内容</a>
                     </div>
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="company.html" class="btn">お知らせ</a>
+                        <a href="notice.html" class="btn">お知らせ</a>
                     </div>
                 </li>
             </ul>
@@ -61,8 +61,29 @@
                 <div class="menu-image-container">
                     <img src="../images/" alt="NoImage" class="menu-image">
                 </div>
-                <p class="price">¥700</p>
-                <p><small class="institute">※2025年2月時点</small></p>
+                <p class="price">¥800</p>
+                <p><small class="institute">※2025年4月時点</small></p>
+            </section>
+
+            <h1 class="menu-category">DRINK</h1>
+
+            <h2 class="menu-category">トロピカルルイボスティー</h1>
+
+            <section class="menu-item">
+                <h3 class="menu-title">南陽フルーツティー</h3>
+                <div class="menu-image-container">
+                    <img src="../images/nanyou.JPG" alt="南陽フルーツティーの写真" class="menu-image">
+                </div>
+                <p class="price">¥500</p>
+                <p><small class="institute">※2025年4月時点</small></p>
+            </section>
+            <section class="menu-item">
+                <h3 class="menu-title">ピスタチオルイボスティー</h3>
+                <div class="menu-image-container">
+                    <img src="../images/pistatio.JPG" alt="ピスタチオルイボスティーの写真" class="menu-image">
+                </div>
+                <p class="price">¥500</p>
+                <p><small class="institute">※2025年4月時点</small></p>
             </section>
         </article>
     </main>
