--- a/html/notice.html
+++ b/html/notice.html
@@ -13,7 +13,7 @@
             <ul>
                 <li>
                     <div class = "navicon">
-                        <a href = "delta_top.html"><img src = "../images/icon.png" alt = "微小夜行電灯のメニュー一覧用画像" class = "iconmenu"></a>
+                        <a href = "https://www.instagram.com/delta_yako?igsh=MTYxZmJzZG5yZHZieA%3D%3D&utm_source=qr"><img src = "../images/icon.png" alt = "微小夜行電灯のメニュー一覧用画像" class = "iconmenu"></a>
                     </div>
                 </li>
 
@@ -32,13 +32,13 @@
 
                 <li>
                     <div class = "navbutton">
-                        <a href = "notice.html" class = "btn">事業内容</a>
+                        <a href = "company.html" class = "btn">事業内容</a>
                     </div>
                 </li>
 
                 <li>
                     <div class = "navbutton">
-                        <a href = "company.html" class = "btn">お知らせ</a>
+                        <a href = "notice.html" class = "btn">お知らせ</a>
                     </div>
                 </li>
             </ul>
