--- a/html/company.html
+++ b/html/company.html
@@ -1,56 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>company_yako</title>
-    <link href = "../css/style.css" rel = "stylesheet">
-    <script src = "../script/script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>notice_yako</title>
+  <link href="../css/style.css" rel="stylesheet" />
+  <script src="../script/script.js" defer></script>
+
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <div class = "navicon">
-                        <a href = "delta_top.html"><img src = "../images/icon.png" alt = "微小夜行電灯のメニュー一覧用画像" class = "iconmenu"></a>
-                    </div>
-                </li>
+  <header>
+    <!-- ハンバーガーメニュー -->
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 
+    <!-- ナビゲーション -->
+    <nav class="nav">
+      <ul>
+        <li>
+          <div class="navicon">
+            <a
+              href="https://www.instagram.com/delta_yako?igsh=MTYxZmJzZG5yZHZieA%3D%3D&utm_source=qr"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="../images/icon.png"
+                alt="微小夜行電灯のメニュー一覧用画像"
+                class="iconmenu"
+            /></a>
+          </div>
+        </li>
+        <li>
+          <div class="navbutton">
+            <a href="delta_top.html?nosplash=true" class="btn">微小夜行電灯</a>
+          </div>
+        </li>
+        <li>
+          <div class="navbutton">
+            <a href="menu.html" class="btn">メニュー</a>
+          </div>
+        </li>
+        <li>
+          <div class="navbutton">
+            <a href="company.html" class="btn">事業内容</a>
+          </div>
+        </li>
+        <li>
+          <div class="navbutton">
+            <a href="notice.html" class="btn">お知らせ</a>
+          </div>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-                <li>
-                    <div class = "navbutton">
-                        <a href = "delta_top.html" class ="btn">微小夜行電灯</a>
-                    </div>
-                </li>
+  <!-- ************ MAIN CONTENTS ************ -->
+  <main class="content">
+    <!-- Intro -->
+    <section class="intro">
+      <h1 class="page-title">事業内容</h1>
+      <p>
+        「<strong>微小夜行電灯</strong>」は〈鴨川屋台特区〉と〈京産屋台化計画〉の二つのプロジェクトを軸に、“動くまちづくり”と“学生起業の民主化”を進めています。
+      </p>
+    </section>
 
-                <li>
-                    <div class = "navbutton">
-                        <a href = "menu.html" class = "btn">メニュー</a>
-                    </div>
-                </li>
+    <!-- Project 1: 鴨川屋台特区 -->
+    <section id="project1" class="project-section">
+      <h2>鴨川屋台特区</h2>
+      <p>
+        鴨川周辺の空き地や営業時間外の店舗前を組織的に確保し、日替わりで多彩な屋台が並ぶ常設型の屋台村を運営します。参加者は定額費用で出店場所をシェアでき、学生や主婦など小資本でも挑戦しやすい仕組みを用意。私たちは土地斡旋手数料と自社出店で収益を上げながら、京都の象徴的景観に新たな価値と賑わいを創出します。
+      </p>
+    </section>
 
-                <li>
-                    <div class = "navbutton">
-                        <a href = "notice.html" class = "btn">事業内容</a>
-                    </div>
-                </li>
+    <!-- 写真エリア（差し替え用） -->
+    <div class="project-image">
+      <!-- ここに画像を入れてください -->
+      <img src="../images/back_yatai_road.png" alt="屋台マッピング画像" />
+    </div>
 
-                <li>
-                    <div class = "navbutton">
-                        <a href = "company.html" class = "btn">お知らせ</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <p>
-            Comming Soon!!
-        </p>
-    </main>
-    <footer>
-        <small>&copy;2025 All rights reserved</small> 
-    </footer>
+    <!-- Project 2: 京産屋台化計画 -->
+    <section id="project2" class="project-section">
+      <h2>京産屋台化計画</h2>
+      <p>
+        コンセプトは「1万円であなたを社長に」。京都産業大学と連携し、屋台貸し出し・仕込み場所・資材保管・営業許可申請サポートまでをワンパッケージで提供します。場所・ノウハウ・コストという起業の三大ハードルを取り除き、アイデアさえあれば“今日から店主”になれる環境を整備。学生の柔軟な発想と大学の施設・ネットワークを結び付け、前例のない起業支援エコシステムを構築します。
+      </p>
+    </section>
+
+    <!-- 活動実績ギャラリー -->
+    <section class="gallery-section">
+      <h2>活動実績ギャラリー</h2>
+      <div class="gallery-grid">
+        <!-- 画像を好きな枚数追加してください -->
+        <img src="../images/yatai_kotatu.jpg" alt="活動実績写真1" />
+        <img src="../images/placeholder.jpg" alt="活動実績写真2" />
+        <img src="../images/placeholder.jpg" alt="活動実績写真3" />
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <small>&copy;2025 All rights reserved</small>
+  </footer>
 </body>
 </html>
