--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -33,12 +33,12 @@
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="notice.html" class="btn">事業内容</a>
+                        <a href="company.html" class="btn">事業内容</a>
                     </div>
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="company.html" class="btn">お知らせ</a>
+                        <a href="notice.html" class="btn">お知らせ</a>
                     </div>
                 </li>
             </ul>
