--- a/html/company.html
+++ b/html/company.html
@@ -50,7 +50,7 @@
         </li>
         <li>
           <div class="navbutton">
-            <a href="notice.html" class="btn">お知らせ</a>
+            <a href="notice.html" class="btn">夜行人図鑑</a>
           </div>
         </li>
       </ul>
@@ -89,12 +89,19 @@
       </p>
     </section>
 
+    <!-- △△△型屋台（穴抜きテキスト） -->
+    <section id="triangle-yatai" class="project-section">
+      <h2>△△△型屋台</h2>
+      <p>私たちは最終的に△△と併設した屋台を目指します。日中は△△の営業を行い、閉店後は暗い△△の中でひっそりと屋内屋台を展開します。(予定)</p>
+      <p>日中に△△を置いていたコーナーを夜間は屋台のカウンターにし、余った△△を利用したメニューによって安価なメニューの提供と、廃棄されてしまう食品を減らし、既存の△△をディープな環境にします。</p>
+    </section>
+
     <!-- 活動実績ギャラリー -->
     <section class="gallery-section">
       <h2>活動実績ギャラリー</h2>
       <div class="gallery-grid">
         <!-- 画像を好きな枚数追加してください -->
-        <img src="../images/yatai_kotatu.jpg" alt="活動実績写真1" />
+        <img src="../images/placeholder.jpg" alt="活動実績写真1" />
         <img src="../images/placeholder.jpg" alt="活動実績写真2" />
         <img src="../images/placeholder.jpg" alt="活動実績写真3" />
       </div>
