--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -38,7 +38,7 @@
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="notice.html" class="btn">お知らせ</a>
+                        <a href="notice.html" class="btn">夜行人図鑑</a>
                     </div>
                 </li>
             </ul>
