--- a/html/notice.html
+++ b/html/notice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>notice_yako</title>
+    <title>yataininn_zukan</title>
     <link href = "../css/style.css" rel = "stylesheet">
     <script src = "../script/script.js"></script>
 </head>
@@ -38,19 +38,62 @@
 
                 <li>
                     <div class = "navbutton">
-                        <a href = "notice.html" class = "btn">お知らせ</a>
+                        <a href = "notice.html" class = "btn">夜行人図鑑</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
+
+        <h1>
+            夜行人図鑑
+        </h1>
+
         <p>
-            Comming Soon!!
+            夜行人図鑑とは屋台に集まった<strong>何者でもない人</strong>が発する迷言や名言を図鑑にして残していくものです
+        </p>
+
+        <div class="container">
+            <div class="person">
+            <div class="image"><img src="../images/yatainin/no01.png" alt="muto"></div>
+            <div class="info">
+                <p class = "zukannmem">No.001</p>
+                <p>年齢: 20代</p>
+                <p>社会的身分: 浪漫家科学教徒</p>
+                <div class="quote">
+                <p>名言: "「自分の人生は自分で歩め。夜は誰かと行け。」"</p>
+                </div>
+            </div>
+            </div>
+            <!-- 同様の要素を他の人物に対して繰り返し -->
+            <div class="person">
+            <div class="image"><img src="../images/yatainin/no02.png" alt="kai"></div>
+            <div class="info">
+                <p class = "zukannmem">No.002</p>
+                <p>年齢: 20代</p>
+                <p>社会的身分: 猫の世話をする人</p>
+                <div class="quote">
+                <p>名言: "「頑張んなくてもいいんじゃね」"</p>
+                </div>
+            </div>
+            </div>
+        </div>
+
+        <p>
+            この企画は屋台に来てくださった夜行人によって成り立っています。ありがとうございます。
+
+            企画者：kaikai_kitan
+            イラスト：YANII
+
+            Special Thanks!
         </p>
     </main>
     <footer>
         <small>&copy;2025 All rights reserved</small> 
     </footer>
+</body>
+
+
 </body>
 </html>
