レイアウトの修正

--- a/html/company.html
+++ b/html/company.html
@@ -101,9 +101,9 @@
       <h2>活動実績ギャラリー</h2>
       <div class="gallery-grid">
         <!-- 画像を好きな枚数追加してください -->
-        <img src="../images/placeholder.jpg" alt="活動実績写真1" />
-        <img src="../images/placeholder.jpg" alt="活動実績写真2" />
-        <img src="../images/placeholder.jpg" alt="活動実績写真3" />
+        <img src="../images/yatai_kotatu.jpg" alt="活動実績写真1" />
+        <img src="../images/yatai_running.png" alt="活動実績写真2" />
+        <img src="../images/yatai_delta.jpg" alt="活動実績写真3" />
       </div>
     </section>
   </main>
