--- a/html/menu.html
+++ b/html/menu.html
@@ -23,7 +23,7 @@
                 </li>
                 <li>
                     <div class="navbutton">
-                        <a href="delta_top.html" class="btn">微小夜行電灯</a>
+                        <a href="delta_top.html?nosplash=true" class="btn">微小夜行電灯</a>
                     </div>
                 </li>
                 <li>
@@ -44,7 +44,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="content">
         <article class="menu-list">
             <h1 class="menu-category">HOTSAND</h1>
             <section class="menu-item">
@@ -59,7 +59,7 @@
             <section class="menu-item">
                 <h3 class="menu-title">フルーツ大福ホットサンド</h3>
                 <div class="menu-image-container">
-                    <img src="../images/" alt="NoImage" class="menu-image">
+                    <img src="../images/icon.png" alt="NoImage" class="menu-image">
                 </div>
                 <p class="price">¥800</p>
                 <p><small class="institute">※2025年4月時点</small></p>
