--- a/html/notice.html
+++ b/html/notice.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav class="nav">
             <ul>
                 <li>
                     <div class = "navicon">
@@ -19,33 +24,33 @@
 
 
                 <li>
-                    <div class = "navbutton">
-                        <a href = "delta_top.html" class ="btn">微小夜行電灯</a>
+                    <div class="navbutton">
+                        <a href="delta_top.html?nosplash=true" class ="btn">微小夜行電灯</a>
                     </div>
                 </li>
 
                 <li>
-                    <div class = "navbutton">
-                        <a href = "menu.html" class = "btn">メニュー</a>
+                    <div class="navbutton">
+                        <a href="menu.html" class = "btn">メニュー</a>
                     </div>
                 </li>
 
                 <li>
-                    <div class = "navbutton">
-                        <a href = "company.html" class = "btn">事業内容</a>
+                    <div class="navbutton">
+                        <a href="company.html" class = "btn">事業内容</a>
                     </div>
                 </li>
 
                 <li>
-                    <div class = "navbutton">
-                        <a href = "notice.html" class = "btn">夜行人図鑑</a>
+                    <div class="navbutton">
+                        <a href="notice.html" class = "btn">夜行人図鑑</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
-
+    <main class="content">
+        <div>
         <h1>
             夜行人図鑑
         </h1>
@@ -88,6 +93,7 @@
 
             Special Thanks!
         </p>
+        </div>
     </main>
     <footer>
         <small>&copy;2025 All rights reserved</small> 
