--- a/html/company.html
+++ b/html/company.html
@@ -100,12 +100,20 @@
     <section class="gallery-section">
       <h2>活動実績ギャラリー</h2>
       <div class="gallery-grid">
-        <!-- 画像を好きな枚数追加してください -->
-        <img src="../images/placeholder.jpg" alt="活動実績写真1" />
-        <img src="../images/placeholder.jpg" alt="活動実績写真2" />
-        <img src="../images/placeholder.jpg" alt="活動実績写真3" />
+        <img src="../images/history/history00.jpg" alt="活動実績写真1"/>
+        <img src="../images/history/history01.jpg" alt="活動実績写真2"/>
+        <img src="../images/history/history02.jpg" alt="活動実績写真3"/>
+        <img src="../images/history/history03.JPG" alt="活動実績写真4"/>
+        <img src="../images/history/history04.jpg" alt="活動実績写真5"/>
+        <img src="../images/history/history05.jpg" alt="活動実績写真6"/>
+        <img src="../images/history/history06.jpg" alt="活動実績写真7"/>
       </div>
     </section>
+
+    <div id="modal" class="modal">
+      <span class="close-button">&times;</span>
+      <img class="modal-content" id="modalImage">
+    </div>
   </main>
 
   <footer>
