--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -54,13 +54,14 @@
         </div>
 
         <div class="image-container">
-            <img src="../images/yatai_delta.jpg" alt="屋台の写真" class="slideshow-img fade">
-            <img src="../images/delta_yako_1.jpg" alt="屋台の写真" class="slideshow-img fade">
-            <img src="../images/yatai_running.png" alt="屋台の写真" class="slideshow-img fade">
+            <img src="../images/home_image/active01.JPG" alt="屋台の食べ物イメージ写真" class="slideshow-img fade">
+            <img src="../images/home_image/active02.jpg" alt="鴨川デルタでの屋台" class="slideshow-img fade">
+            <img src="../images/home_image/active03.JPG" alt="屋台シアターの写真" class="slideshow-img fade">
+            <img src="../images/home_image/active04.JPG" alt="屋台を押している写真" class="slideshow-img fade">
         </div>
 
         <div class="deformed-image-container">
-            <img src="../images/yatai_deforume.png" alt="デフォルメされた屋台イラスト" class="deformed-img">
+            <img src="../images/yatai_defo.jpg" alt="デフォルメされた屋台イラスト" class="deformed-img">
         </div>
 
         <div class="description">
@@ -79,6 +80,21 @@
             </section>
         </article>
     </main>
+
+    <section class="reservation-section">
+        <h2>屋台貸し出しのご予約</h2>
+        <p>以下のカレンダーで空き状況をご確認の上、フォームよりご予約ください。</p>
+        <div class="reservation-container">
+            <div class="calendar-embed">
+                <h3>予約状況カレンダー</h3>
+                <iframe src="https://calendar.google.com/calendar/embed?src=cfed507b8bd3c50b9beb4a6f84023b9b3331c85252e96c95b0d6812102cf80b7%40group.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            </div>
+            <div class="form-embed">
+                <h3>予約フォーム</h3>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdcQyz_HwlTNo67d72XjLdgDFU4SO1vgGPBdW0A4F2_XaC48A/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+            </div>
+        </div>
+    </section>
 
     <footer>
       <small>&copy;2025 All rights reserved</small>  
