--- a/html/delta_top.html
+++ b/html/delta_top.html
@@ -82,7 +82,7 @@
     </main>
 
     <section class="reservation-section">
-        <h2>屋台貸し出しのご予約</h2>
+        <h2>屋台貸し出しのご予約はこちら</h2>
         <p>以下のカレンダーで空き状況をご確認の上、フォームよりご予約ください。</p>
         <div class="reservation-container">
             <div class="calendar-embed">
